--- a/src/app/pages/inventario/inventario.component.html
+++ b/src/app/pages/inventario/inventario.component.html
@@ -44,8 +44,7 @@
           <img [src]="'http://localhost:8080/image/' + obtenerNombreImagen(list.foto)" alt="" class="img-table">
         </td>
         <td class="text-center vertical_align">
-          <button class="btn btn-rojo" (click)="buscar(list.id, 1, list.nombre)" data-bs-toggle="modal"
-            data-bs-target="#exampleModal">Actualizar</button>
+          <button class="btn btn-rojo" (click)="buscar(list.id, 1, list.nombre)">Actualizar</button>
         </td>
         <td class="text-center vertical_align">
           <button class="btn btn-rojo" (click)="buscar(list.id, 2, list.nombre)" data-bs-toggle="modal"
