--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -1,8 +1,8 @@
 <nav class="navbar navbar-expand-lg navbar-light rojo fixed-top">
     <div class="container">
         <a class="navbar-brand">
-            <img src="../../../assets/img/logo.jpg" alt="..." width="30" height="30"><span
-                class="blanco">CPMT</span></a>
+            <img src="../../../assets/img/" alt="..." width="30" height="30"><span
+                class="gris">Manzana Serrana</span></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -10,24 +10,24 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item active cursor_pointer">
-                    <a class="nav-link" (click)="inventario()"><i class="blanco fa fa-archive"></i>
-                        <span class="blanco"> Inventario</span></a>
+                    <a class="nav-link" (click)="inventario()"><i class="gris fa fa-archive"></i>
+                        <span class="gris"> Inventario</span></a>
                 </li>
                 <li class="nav-item cursor_pointer">
-                    <a class="nav-link" (click)="actividades()"><i class="blanco fa fa-calendar-check-o"></i>
-                        <span class="blanco"> Actividades</span></a>
+                    <a class="nav-link" (click)="actividades()"><i class="gris fa fa-calendar-check-o"></i>
+                        <span class="gris"> Actividades</span></a>
                 </li>
                 <li class="nav-item cursor_pointer">
-                    <a class="nav-link" (click)="eventos()"><i class="blanco fa fa-bicycle"></i>
-                        <span class="blanco"> Eventos</span></a>
+                    <a class="nav-link" (click)="eventos()"><i class="gris fa fa-bicycle"></i>
+                        <span class="gris"> Eventos</span></a>
                 </li>
                 <li class="nav-item cursor_pointer">
-                    <a class="nav-link" (click)="ventas()"><i class="blanco fa fa-line-chart"></i>
-                        <span class="blanco"> Ventas y Pedidos</span></a>
+                    <a class="nav-link" (click)="ventas()"><i class="gris fa fa-line-chart"></i>
+                        <span class="gris"> Ventas y Pedidos</span></a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                        aria-expanded="false" style="color: white;"><i class="blanco fa fa-plus-square"></i>
+                        aria-expanded="false"><i class="gris fa fa-plus-square"></i>
                          Agregar
                     </a>
                     <ul class="dropdown-menu">
@@ -40,8 +40,8 @@
                     </ul>
                 </li>
                 <li class="nav-item cursor_pointer">
-                    <a class="nav-link" (click)="logout()"><i class="blanco fa fa-sign-out"></i>
-                        <span class="blanco"> Cerrar Sesión</span>
+                    <a class="nav-link" (click)="logout()"><i class="gris fa fa-sign-out"></i>
+                        <span class="gris"> Cerrar Sesión</span>
                     </a>
                 </li>
             </ul>
