--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,35 +1,49 @@
 <nav class="navbar navbar-expand-lg navbar-light rojo fixed-top">
-    <div class="container">
-      <a class="navbar-brand" (click)="home()">
-        <img src="../../../assets/img/logo.jpg" alt="..." width="30" height="30"><span class="blanco">CPMT</span></a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
+  <div class="container me-0 ms-5">
+    <div class="navbar-links">
       <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav ml-auto">
+        <ul class="navbar-nav">
           <li class="nav-item active cursor_pointer">
-            <a class="nav-link" (click)="home()"><i class="blanco fa fa-home"></i>
-                <span class="blanco"> Incio</span></a>
+            <a class="nav-link" (click)="home()">
+              <span class="gris">Incio</span></a>
           </li>
           <li class="nav-item cursor_pointer">
-            <a class="nav-link" (click)="productos()"><i class="blanco fa fa-tags"></i>
-                <span class="blanco"> Productos</span></a>
+            <a class="nav-link" (click)="productos()">
+              <span class="gris">Productos</span></a>
           </li>
           <li class="nav-item cursor_pointer">
-            <a class="nav-link" (click)="pedidos()"><i class="blanco fa fa-envelope"></i>
-                <span class="blanco"> Pedidos</span></a>
+            <a class="nav-link" (click)="pedidos()">
+              <span class="gris">Pedidos</span></a>
           </li>
           <li class="nav-item cursor_pointer">
-            <a class="nav-link" (click)="actividades()"><i class="blanco fa fa-list"></i>
-                <span class="blanco"> Actividades</span></a>
+            <a class="nav-link" (click)="actividades()">
+              <span class="gris"> Actividades</span></a>
           </li>
           <li class="nav-item cursor_pointer">
-            <a class="nav-link" (click)="quienesSomos()"><i class="blanco fa fa-users"></i>
-                <span class="blanco"> ¿Quienes Somos?</span></a>
+            <a class="nav-link" (click)="quienesSomos()">
+            <span class="gris">¿Quienes Somos?</span></a>
           </li>
         </ul>
       </div>
     </div>
-  </nav>
-  
+    <div class="navbar-header">
+      <a class="navbar-brand" (click)="home()">
+        <img src="" alt="" width="30" height="30"><span class="gris">Manzana Serrana</span></a>
+    </div>
+    <div class="navbar-social">
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item active cursor_pointer">
+            <i class="fa fa-facebook-official fa-lg gris" aria-hidden="true"></i>
+          </li>
+          <li class="nav-item active cursor_pointer">
+            <i class="fa fa-whatsapp fa-lg gris" aria-hidden="true"></i>
+          </li>
+          <li class="nav-item active cursor_pointer">
+            <i class="fa fa-instagram fa-lg gris" aria-hidden="true"></i>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </div>
+</nav>
