--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,8 +1,28 @@
 <footer class="sticky-footer gris">
-    <div class="container my-auto">
-        <div class="copyright text-center my-auto blanco">
-            <h1>Información de contacto</h1>
-            <span>Copyright © 2023 Rancho Escondido | Powered by Rancho Escondido</span>
+      <div class="row">
+        <!-- Columna 1: Logo -->
+        <div class="col-md-3">
+          <img src="ruta_del_logo.png" alt="Logo de la empresa" width="100">
         </div>
-    </div>
-</footer>
+        <!-- Columna 2: Datos de la empresa -->
+        <div class="col-md-4">
+          <p>Copyright © 2023 Manzana Serrana</p>
+        </div>
+        <!-- Columna 3: Campo de entrada de correo -->
+        <div class="col-md-3">
+          <div class="input-group mb-3">
+            <input type="email" class="form-control" placeholder="Correo electrónico" aria-label="Correo electrónico" aria-describedby="basic-addon2">
+            <div class="input-group-append">
+              <button class="btn btn-primary" type="button">Suscribirse</button>
+            </div>
+          </div>
+        </div>
+        <!-- Columna 4: Enlaces a las redes sociales -->
+        <div class="col-md-2">
+          <a href="#" class="fa fa-facebook-official fa-lg gris" aria-hidden="true"></a>
+          <a href="#" class="fa fa-whatsapp fa-lg gris" aria-hidden="true"></a>
+          <a href="#" class="fa fa-instagram fa-lg gris" aria-hidden="true"></a>
+        </div>
+      </div>
+  </footer>
+  
