--- a/src/app/pages/productos/productos.component.html
+++ b/src/app/pages/productos/productos.component.html
@@ -6,9 +6,9 @@
   </div>
 </div>
 <div class="container text-center mt-5 mb-5">
-  <h6>Manzana Serrana</h6>
-  <h1>Nuestros</h1>
-  <h1>Productos</h1>
+  <span class="texto_subtitle">Manzana Serrana</span>
+  <br>
+  <p class="texto_title bold space_text">Nuestros Productos</p>
 </div>
 <div class="container mb-4 mt-3">
   <div class="row row-cols-1 row-cols-md-3 g-4">
@@ -19,8 +19,9 @@
           <div class="card-body">
             <h5 class="card-title text-center">{{ aux.nombre }}</h5>
             <p>{{ aux.descripcion }}</p>
-            <p class="card-text">Precio: ${{aux.precio}} por kg</p>
-            <p class="card-text">En Stock: {{ aux.stock }} kg</p>
+            <div class="text-center">
+              <button class="btn">Hacer Pedido</button>
+            </div>
           </div>
         </div>
       </div>
