--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,7 +3,9 @@
 @import "~font-awesome/css/font-awesome.css";
 @import 'leaflet/dist/leaflet.css';
 @import 'swiper/swiper-bundle.css';
-
+$color_verde: #4E9545;
+$letra: 'open-sans';
+$color_gris: #b3b3b3;
 .rojo {
     background-color: rgb(248, 248, 248);
 }
@@ -88,7 +90,16 @@
 //estilos del navbar
 .navbar {
     height: 80px;
-    /* Ajusta la altura a tu preferencia */
+    width: auto;
+    background-color: rgba(0, 0, 0, 0);
+    background-image: url('./assets/img/fondo_prueba.png');
+    /* Ruta a la imagen de fondo */
+    background-size: cover;
+    /* Ajustar la imagen al tamaño del contenedor */
+    background-repeat: no-repeat;
+    /* Evitar la repetición de la imagen */
+    background-attachment: fixed;
+    /* Fijar la imagen de fondo */
 }
 
 /* Estilo para los elementos del menú */
@@ -103,8 +114,66 @@
     /* Tamaño de fuente del texto */
 }
 
-$color_verde: #4E9545;
-
 .borde {
     border-color: $color_verde;
 }
+
+.texto_title {
+    font-family: $letra;
+    font-size: 70px;
+    color: $color_verde;
+}
+
+.texto_subtitle {
+    font-family: $letra;
+    font-size: 25px;
+    color: $color_gris;
+}
+
+.bold {
+    font-weight: bold;
+}
+
+.space_text {
+    white-space: pre-line;
+}
+
+.swiper {
+    width: 100%;
+    height: 100%;
+    background: #000;
+  }
+
+  .swiper-slide {
+    font-size: 18px;
+    color: #fff;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+    padding: 40px 60px;
+  }
+
+  .parallax-bg {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 130%;
+    height: 100%;
+    -webkit-background-size: cover;
+    background-size: cover;
+    background-position: center;
+  }
+
+  .swiper-slide .title {
+    font-size: 41px;
+    font-weight: 300;
+  }
+
+  .swiper-slide .subtitle {
+    font-size: 21px;
+  }
+
+  .swiper-slide .text {
+    font-size: 14px;
+    max-width: 400px;
+    line-height: 1.3;
+  }
