--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,48 +1,62 @@
-<nav class="navbar navbar-expand-lg navbar-light rojo fixed-top">
-  <div class="container me-0 ms-5">
-    <div class="navbar-links">
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item active cursor_pointer">
-            <a class="nav-link" (click)="home()">
-              <span class="gris">Incio</span></a>
-          </li>
-          <li class="nav-item cursor_pointer">
-            <a class="nav-link" (click)="productos()">
-              <span class="gris">Productos</span></a>
-          </li>
-          <li class="nav-item cursor_pointer">
-            <a class="nav-link" (click)="pedidos()">
-              <span class="gris">Pedidos</span></a>
-          </li>
-          <li class="nav-item cursor_pointer">
-            <a class="nav-link" (click)="actividades()">
-              <span class="gris"> Actividades</span></a>
-          </li>
-          <li class="nav-item cursor_pointer">
-            <a class="nav-link" (click)="quienesSomos()">
-            <span class="gris">¿Quienes Somos?</span></a>
-          </li>
-        </ul>
+<nav class="fondo_navbar navbar-expand-lg navbar-light fixed-top">
+  <div class="container-fluid p-0 m-2">
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+      aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="row">
+      <div class="col mt-2">
+        <div class="navbar-links">
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item cursor_pointer">
+                <a class="nav-link" routerLinkActive="active" [routerLink]="['/home']">
+                  <span class="">Incio</span></a>
+              </li>
+              <li class="nav-item cursor_pointer">
+                <a class="nav-link" routerLinkActive="active" [routerLink]="['/productos']">
+                  <span class="">Productos</span></a>
+              </li>
+              <li class="nav-item cursor_pointer">
+                <a class="nav-link" routerLinkActive="active" [routerLink]="['/pedidos']">
+                  <span class="">Pedidos</span></a>
+              </li>
+              <li class="nav-item cursor_pointer">
+                <a class="nav-link" routerLinkActive="active" [routerLink]="['/actividades']">
+                  <span class="">Actividades</span></a>
+              </li>
+              <li class="nav-item cursor_pointer">
+                <a class="nav-link" routerLinkActive="active" [routerLink]="['/quienesSomos']">
+                  <span class="">¿Quienes Somos?</span></a>
+              </li>
+            </ul>
+          </div>
+        </div>
       </div>
-    </div>
-    <div class="navbar-header">
-      <a class="navbar-brand" (click)="home()">
-        <img src="" alt="" width="30" height="30"><span class="gris">Manzana Serrana</span></a>
-    </div>
-    <div class="navbar-social">
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item active cursor_pointer">
-            <i class="fa fa-facebook-official fa-lg gris" aria-hidden="true"></i>
-          </li>
-          <li class="nav-item active cursor_pointer">
-            <i class="fa fa-whatsapp fa-lg gris" aria-hidden="true"></i>
-          </li>
-          <li class="nav-item active cursor_pointer">
-            <i class="fa fa-instagram fa-lg gris" aria-hidden="true"></i>
-          </li>
-        </ul>
+      <div class="col">
+        <div class="navbar-header text-center">
+          <a class="navbar-brand" (click)="home">
+            <img src="" alt="" width="30" height="30">
+            <span class="gris">Manzana Serrana</span>
+          </a>
+        </div>
+      </div>
+      <div class="col mt-2 mr-4">
+        <div class="navbar-social">
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ml-auto">
+              <li class="nav-item cursor_pointer">
+                <i class="fa fa-facebook-official fa-lg gris" aria-hidden="true"></i>
+              </li>
+              <li class="nav-item cursor_pointer">
+                <i class="fa fa-whatsapp fa-lg gris" aria-hidden="true"></i>
+              </li>
+              <li class="nav-item cursor_pointer">
+                <i class="fa fa-instagram fa-lg gris" aria-hidden="true"></i>
+              </li>
+            </ul>
+          </div>
+        </div>
       </div>
     </div>
   </div>
