--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -1,28 +1,6 @@
+.active {
+  font-weight: bold;
+  color: #94B601 !important;
+}
 
-  .box {
-    margin-top: 80px;
-    width:100%;
-    height:30px;
-    background-color:#000;
-    position:relative;
-  }
-  .box-1 {
-    width:50%;
-    background-color:#fff;
-    height:100%;
-    border-radius:0px 40px 0px 0px;
-    border-top:5px solid yellow;
-    border-right:5px solid yellow;
-  }
-  .box-2 {
-    position:absolute;
-    background-color:#fff;
-    height:100%;
-    width:50%;
-    right:0;
-    top:0;
-    border-radius:40px 0px 0px 0px;
-    border-top:5px solid yellow;
-    border-left:5px solid yellow;
-  }
   
