--- a/src/app/pages/actividades/actividades.component.html
+++ b/src/app/pages/actividades/actividades.component.html
@@ -1,20 +1,38 @@
-<div class="container-fluid p-0">
-    <div class="row m-0">
-        <div class="col-12 p-0">
-            <img src="../../../assets/img/largo.webp" class="img-fluid" alt="...">
-            <div class="overlay">
-                <h1 class="text-white text-center">Actividades</h1>
-            </div>
-        </div>
+<div id="carouselExampleIndicators" class="carousel slide">
+    <div class="carousel-indicators">
+      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
     </div>
-</div>
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="../../../assets/img/carrusel.png" class="d-block w-100" alt="...">
+      </div>
+      <div class="carousel-item">
+        <img src="../../../assets/img/carrusel2.png" class="d-block w-100" alt="...">
+      </div>
+      <div class="carousel-item">
+        <img src="../../../assets/img/carrusel3.png" class="d-block w-100" alt="...">
+      </div>
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
+  </div>
+<div class="container text-center mt-3 mb-4">
+    <span class="texto_subtitle">Manzana Serrana</span><br>
+    <p class="texto_title bold espacios_textos">Recreacion &</p><br>
+    <p class="texto_title bold espacios_textos">Deportes</p>
+  </div>
 <div class="container mt-3 mb-3">
     <div class="row row-cols-1 row-cols-md-2 g-4">
-        <div class="col-12 mb-2">
-            <h1>Recreacion y deporte</h1>
-        </div>
         <div class="col">
-            <div class="">
+            <div class="borde p-4">
                 <img src="../../../assets/img/act-1.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">Trail Running</h5>
@@ -23,7 +41,7 @@
             </div>
         </div>
         <div class="col">
-            <div class="">
+            <div class="borde p-4">
                 <img src="../../../assets/img/act-2.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">Camping</h5>
