--- a/src/app/pages/pedidos/pedidos.component.html
+++ b/src/app/pages/pedidos/pedidos.component.html
@@ -1,20 +1,43 @@
-<div class="container-fluid p-0">
-    <div class="row m-0">
-        <div class="col-12 p-0">
-            <img src="../../../assets/img/largo.webp" class="img-fluid" alt="...">
-            <div class="overlay">
-                <h1 class="text-white text-center">Pedidos</h1>
-            </div>
+<div id="carouselExampleIndicators" class="carousel slide">
+    <div class="carousel-indicators">
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
+            aria-current="true" aria-label="Slide 1"></button>
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+            aria-label="Slide 2"></button>
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+            aria-label="Slide 3"></button>
+    </div>
+    <div class="carousel-inner">
+        <div class="carousel-item active">
+            <img src="../../../assets/img/carrusel.png" class="d-block w-100" alt="...">
+        </div>
+        <div class="carousel-item">
+            <img src="../../../assets/img/carrusel.png" class="d-block w-100" alt="...">
+        </div>
+        <div class="carousel-item">
+            <img src="../../../assets/img/carrusel.png" class="d-block w-100" alt="...">
         </div>
     </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+        data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+        data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+    </button>
 </div>
-<div class="container-fluid m-5">
+<div class="container mt-5 mb-5">
     <div class="d-flex align-items-start">
         <div class="nav flex-column nav-pills me-3" id="v-pills-tab" role="tablist" aria-orientation="vertical">
             <button class="nav-link active" id="v-pills-home-tab" data-bs-toggle="pill" data-bs-target="#v-pills-home"
-                type="button" role="tab" aria-controls="v-pills-home" aria-selected="true" (click)="cambiarMapa()">Mayoreo</button>
+                type="button" role="tab" aria-controls="v-pills-home" aria-selected="true"
+                (click)="cambiarMapa()">Mayoreo</button>
             <button class="nav-link" id="v-pills-profile-tab" data-bs-toggle="pill" data-bs-target="#v-pills-profile"
-                type="button" role="tab" aria-controls="v-pills-profile" aria-selected="false" (click)="cambiarMapa()">Menudeo</button>
+                type="button" role="tab" aria-controls="v-pills-profile" aria-selected="false"
+                (click)="cambiarMapa()">Menudeo</button>
         </div>
         <div class="tab-content" id="v-pills-tabContent">
             <!-- Seccion de mayoreo -->
@@ -22,7 +45,7 @@
                 tabindex="0">
                 <div class="mr-5">
                     <form (ngSubmit)="submitForm()">
-                        <div class="row row-cols-1 row-cols-md-3 g-4">
+                        <div class="row row-cols-1 row-cols-md-3 g-5">
                             <ng-container *ngFor="let aux of listaProductos">
                                 <div class="col mb-2">
                                     <div class="card">
@@ -51,7 +74,6 @@
                                                     <input type="number" class="form-control" [disabled]="!aux.selected"
                                                         [name]="'cantidad_' + aux.id" [(ngModel)]="aux.cantidad"
                                                         (change)="onCantidadBlur(aux)" [min]="1">
-
                                                 </div>
                                             </div>
                                         </div>
@@ -60,54 +82,104 @@
                             </ng-container>
                         </div>
                         <ng-container *ngIf="banderaContacto">
-                            <div class="container">
-                                <h2>Productos a comprar</h2>
-                                <ng-container *ngFor="let pro of productosSeleccionados; let i = index">
-                                    <div class="producto-seleccionado">
-                                        <h6>Manzana: {{ pro.nombre }}</h6>
-                                        <h6>Cantidad: {{ pro.cantidad }}</h6>
-                                        <h6>Precio: {{ pro.precio }}</h6>
-                                        <h6>subtotal: {{ pro.subtotal }}</h6>
-                                    </div>
-                                </ng-container>
-                                <h2>Total : {{total}}</h2>
-                            </div>
-                            <div class="container mt-5 mb-4">
-                                <h1 class="text-center">Contáctanos</h1>
+                            <div>
+                                <p class="text-center texto_title">Cesta de Productos</p>
                                 <div class="row">
-                                    <div class="col">
+                                    <ng-container *ngFor="let pro of productosSeleccionados; let i = index">
+                                        <div class="col-6">
+                                            <div class="card mb-3" style="max-width: 540px;">
+                                                <div class="row g-0">
+                                                    <div class="col-md-5">
+                                                        <img [src]="'http://localhost:8080/image/' + obtenerNombreImagen(pro.foto)"
+                                                            class="img-fluid rounded-start" alt="...">
+                                                    </div>
+                                                    <div class="col-md-7">
+                                                        <div class="card-body">
+                                                            <h5 class="card-title">{{ pro.nombre }}</h5>
+                                                            <p class="card-text">Cantidad: {{ pro.cantidad }}</p>
+                                                            <p class="card-text">Precio: ${{ pro.precio }}</p>
+                                                            <p class="card-text"><small
+                                                                    class="text-body-secondary">Subtotal:
+                                                                    ${{ pro.subtotal }}</small></p>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </ng-container>
+                                </div>
+
+                                <h2 class="text-center">Total : ${{total}}</h2>
+                            </div>
+                            <div class="mt-5 mb-4 fondo_card p-5">
+                                <div class="text-center">
+                                    <span class="texto_subtitle">Manzana Serrana</span>
+                                    <br>
+                                    <p class="texto_title bold space_text">Pedidos</p>
+                                </div>
+                                <div class="row">
+                                    <div class="col texto_card">
                                         <form [formGroup]="productForm">
-                                            <div class="mb-3">
-                                                <label for="nombre" class="form-label">Nombre</label>
-                                                <input type="text" class="form-control" id="nombre"
-                                                    placeholder="Tu nombre" formControlName="nombre">
+                                            <div class="row">
+                                                <div class="col-md-12 mb-3">
+                                                    <label for="nombre" class="form-label">Nombre</label>
+                                                    <input type="text" class="form-control" id="nombre"
+                                                        placeholder='"Nombre Apellidos"' formControlName="nombre">
+                                                    <div *ngIf="productForm?.get('nombre')?.hasError('required') && productForm.get('nombre')?.touched"
+                                                        class="invalid-check">
+                                                        Este campo es requerido.
+                                                    </div>
+                                                </div>
                                             </div>
-                                            <div class="mb-3">
-                                                <label for="estado" class="form-label">Estado</label>
-                                                <input type="text" class="form-control" id="estado" placeholder=""
-                                                    formControlName="estado">
+                                            <div class="row">
+                                                <div class="col-md-6 mb-3">
+                                                    <label for="estado" class="form-label">Estado</label>
+                                                    <input type="text" class="form-control" id="estado"
+                                                        placeholder='"Puebla"' formControlName="estado">
+                                                    <div *ngIf="productForm?.get('estado')?.hasError('required') && productForm.get('estado')?.touched"
+                                                        class="invalid-check">
+                                                        Este campo es requerido.
+                                                    </div>
+                                                </div>
+                                                <div class="col-md-6 mb-3">
+                                                    <label for="ciudad" class="form-label">Ciudad</label>
+                                                    <input type="text" class="form-control" id="ciudad"
+                                                        placeholder='"Teziutlán"' formControlName="ciudad">
+                                                    <div *ngIf="productForm?.get('ciudad')?.hasError('required') && productForm.get('ciudad')?.touched"
+                                                        class="invalid-check">
+                                                        Este campo es requerido.
+                                                    </div>
+                                                </div>
                                             </div>
-                                            <div class="mb-3">
-                                                <label for="ciudad" class="form-label">Ciudad</label>
-                                                <input type="text" class="form-control" id="ciudad" placeholder=""
-                                                    formControlName="ciudad">
-                                            </div>
-                                            <div class="mb-3">
-                                                <label for="email" class="form-label">Correo Electrónico</label>
-                                                <input type="email" class="form-control" id="email"
-                                                    placeholder="tucorreo@example.com" formControlName="email">
-                                            </div>
-                                            <div class="mb-3">
-                                                <label for="telefono" class="form-label">Telefono</label>
-                                                <input type="phone" class="form-control" id="telefono" placeholder=""
-                                                    formControlName="telefono">
+                                            <div class="row">
+                                                <div class="col-md-6 mb-3">
+                                                    <label for="email" class="form-label">Correo Electrónico</label>
+                                                    <input type="email" class="form-control" id="email"
+                                                        placeholder='"tucorreo@example.com"' formControlName="email">
+                                                    <div *ngIf="productForm?.get('email')?.hasError('required') && productForm.get('email')?.touched"
+                                                        class="invalid-check">
+                                                        Este campo es requerido.
+                                                    </div>
+                                                </div>
+                                                <div class="col-md-6 mb-3">
+                                                    <label for="telefono" class="form-label">Teléfono</label>
+                                                    <input type="phone" class="form-control" id="telefono"
+                                                        placeholder='"1235550101"' formControlName="telefono">
+                                                    <div *ngIf="productForm?.get('telefono')?.hasError('required') && productForm.get('telefono')?.touched"
+                                                        class="invalid-check">
+                                                        Este campo es requerido.
+                                                    </div>
+                                                </div>
                                             </div>
                                         </form>
                                     </div>
                                 </div>
-                            </div>
-                            <div class="mt-5">
-                                <button type="submit" class="btn btn-rojo">Guardar Selección</button>
+                                <div class="row">
+                                    <div class="col">
+                                        <button type="submit" class="btn_enviar_pedido bold">Enviar
+                                            Solicitud</button>
+                                    </div>
+                                </div>
                             </div>
                         </ng-container>
                     </form>
@@ -132,10 +204,44 @@
                         </div>
                     </ng-container>
                 </div>
+
             </div>
         </div>
     </div>
     <div class="mostrar" id="banderaMapa">
+        <div class="swiper mySwiper">
+            <div class="swiper-wrapper">
+                <div class="swiper-slide">
+                    <img src="https://swiperjs.com/demos/images/nature-1.jpg" />
+                </div>
+                <div class="swiper-slide">
+                    <img src="https://swiperjs.com/demos/images/nature-2.jpg" />
+                </div>
+                <div class="swiper-slide">
+                    <img src="https://swiperjs.com/demos/images/nature-3.jpg" />
+                </div>
+                <div class="swiper-slide">
+                    <img src="https://swiperjs.com/demos/images/nature-4.jpg" />
+                </div>
+                <div class="swiper-slide">
+                    <img src="https://swiperjs.com/demos/images/nature-5.jpg" />
+                </div>
+                <div class="swiper-slide">
+                    <img src="https://swiperjs.com/demos/images/nature-6.jpg" />
+                </div>
+                <div class="swiper-slide">
+                    <img src="https://swiperjs.com/demos/images/nature-7.jpg" />
+                </div>
+                <div class="swiper-slide">
+                    <img src="https://swiperjs.com/demos/images/nature-8.jpg" />
+                </div>
+                <div class="swiper-slide">
+                    <img src="https://swiperjs.com/demos/images/nature-9.jpg" />
+                </div>
+            </div>
+            <div class="swiper-pagination"></div>
+        </div>
+
         <h1 style="margin-left: 110px;">Puntos de Venta</h1>
         <div id="map" style="width: 90%; height: 500px; margin-left: 110px;"></div>
     </div>
