--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,9 +7,11 @@ $color_verde: #4E9545;
 $letra: 'open-sans';
 $color_gris: #b3b3b3;
 $color_gris_oscuro: #7c7c7c;
+$color_fondo_card: #F6F5F1;
 
-.rojo {
-    background-color: rgb(248, 248, 248);
+.invalid-check {
+    font-size: small ;
+    color: red !important;
 }
 
 .blanco {
@@ -65,6 +67,18 @@ $color_gris_oscuro: #7c7c7c;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
+.btn_enviar_pedido {
+    width: 100%;
+    border: 2px solid white;
+    background-color: white;
+    color: $color_gris_oscuro;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 30px;
+    margin-top: 20px;
+    padding: 10px 10px;
+    color: $color_verde;
+  }  
+
 .img-table {
     background-image: none !important;
     width: 100px;
@@ -76,7 +90,6 @@ $color_gris_oscuro: #7c7c7c;
 
 .card-img-fixed {
     object-fit: cover;
-    /* Esto mantendrá la proporción de aspecto y recortará la imagen si es necesario */
 }
 
 .check-mark {
@@ -84,11 +97,8 @@ $color_gris_oscuro: #7c7c7c;
     top: 0;
     right: 0;
     color: white;
-    /* Color del texto del check */
     padding: 5px;
-    /* Espaciado interior del check */
     border-radius: 50%;
-    /* Hace que el check sea circular */
 }
 
 .ocultar {
@@ -99,41 +109,41 @@ $color_gris_oscuro: #7c7c7c;
     display: initial;
 }
 
-//estilos del navbar
-.navbar {
-    height: 80px;
+.fondo_navbar {
+    height: auto;
     width: auto;
     background-color: rgba(0, 0, 0, 0);
     background-image: url('./assets/img/fondo_prueba.png');
-    /* Ruta a la imagen de fondo */
     background-size: cover;
-    /* Ajustar la imagen al tamaño del contenedor */
     background-repeat: no-repeat;
-    /* Evitar la repetición de la imagen */
     background-attachment: fixed;
-    /* Fijar la imagen de fondo */
 }
 
 /* Estilo para los elementos del menú */
 .navbar-nav .nav-item {
     margin: 0 10px;
-    /* Espacio entre los elementos del menú */
 }
 
-/* Estilo para el texto de los elementos del menú */
 .navbar-nav .nav-item .blanco {
     font-size: 18px;
-    /* Tamaño de fuente del texto */
+}
+
+.nav-link {
+    color: black;
 }
 
 .borde {
-    border-color: $color_verde;
+    border: 2px solid $color_verde;
+    border-radius: 0%;
 }
+
 
 .texto_title {
     font-family: $letra;
-    font-size: 70px;
+    font-size: 65px;
     color: $color_verde;
+    padding: 0%;
+    margin: 0%;
 }
 
 .texto_card {
@@ -152,47 +162,15 @@ $color_gris_oscuro: #7c7c7c;
     font-weight: bold;
 }
 
+.fondo_card {
+    background-color: $color_fondo_card;
+}
+
 //revisar este en productos es para que se despliegue palabra por palabra
 .space_text {
     white-space: pre-line;
 }
 
-.swiper {
-    width: 100%;
-    height: 100%;
-    background: #000;
-}
-
-.swiper-slide {
-    font-size: 18px;
-    color: #fff;
-    -webkit-box-sizing: border-box;
-    box-sizing: border-box;
-    padding: 40px 60px;
-}
-
-.parallax-bg {
-    position: absolute;
-    left: 0;
-    top: 0;
-    width: 130%;
-    height: 100%;
-    -webkit-background-size: cover;
-    background-size: cover;
-    background-position: center;
-}
-
-.swiper-slide .title {
-    font-size: 41px;
-    font-weight: 300;
-}
-
-.swiper-slide .subtitle {
-    font-size: 21px;
-}
-
-.swiper-slide .text {
-    font-size: 14px;
-    max-width: 400px;
-    line-height: 1.3;
+.espacios_textos {
+    display: inline-block; line-height: 1;
 }
