--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -44,6 +44,11 @@
                         <span class="gris"> Cerrar Sesión</span>
                     </a>
                 </li>
+                <li class="nav-item cursor_pointer">
+                    <a class="nav-link" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight">
+                        <i class="fa fa-comments-o gris" aria-hidden="true"></i>
+                    </a>
+                </li>
             </ul>
         </div>
     </div>
