--- a/src/app/pages/inventario/inventario.component.html
+++ b/src/app/pages/inventario/inventario.component.html
@@ -1,25 +1,8 @@
-<!-- <div class="swiper-container">
-    <div class="swiper-wrapper">
-       Tus diapositivas van aquí
-      <div class="swiper-slide">Slide 1</div>
-      <div class="swiper-slide">Slide 2</div>
-      <div class="swiper-slide">Slide 3</div>
-    </div>
-  
-     Agrega la paginación (si lo deseas) 
-    <div class="swiper-pagination"></div>
-  
-  Agrega la navegación (si lo deseas)
-    <div class="swiper-button-next"></div>
-    <div class="swiper-button-prev"></div>
-  </div> -->
-<div class="mt-1">
-  <span>.</span>
+<div class="container text-center mt-5 mb-4">
+  <span class="texto_subtitle">Manzana Serrana</span><br>
+  <p class="texto_title bold espacios_textos">Inventario</p>
 </div>
-<div class="container">
-  <h1 class="mt-5 mb-3 text-center">Inventario</h1>
-</div>
-<div class="container mt-3">
+<div class="container mt-3 p-1">
   <table class="table table-hover">
     <thead>
       <tr class="text-center">
@@ -70,6 +53,23 @@
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
         <button type="button" class="btn btn-primary" (click)="eliminar()">Save changes</button>
       </div>
+    </div>
+  </div>
+</div>
+
+<div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasRightLabel">
+  <div class="offcanvas-header">
+    <h5 id="offcanvasRightLabel">Mandar Nota a Administrador</h5>
+    <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+  </div>
+  <div class="offcanvas-body">
+    <div class="mb-3">
+      <label for="exampleFormControlTextarea1" class="form-label">Example textarea</label>
+      <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+    </div>
+    <div>
+      <button type="submit" class="btn btn-primary mb-3">Enviar
+      </button>
     </div>
   </div>
 </div>
