--- a/src/app/pages/eventos/eventos.component.html
+++ b/src/app/pages/eventos/eventos.component.html
@@ -1,8 +1,6 @@
-<div class="mt-1">
-  <span>.</span>
-</div>
-<div class="container">
-  <h1 class="mt-5 mb-3 text-center">Eventos</h1>
+<div class="container text-center mt-5 mb-4">
+  <span class="texto_subtitle">Manzana Serrana</span><br>
+  <p class="texto_title bold espacios_textos">Eventos</p>
 </div>
 <div class="container mt-3">
   <table class="table table-hover">
@@ -34,8 +32,8 @@
     </tbody>
   </table>
 </div>
-<div class="container mt-3">
-  <h1 class="mt-5 mb-3 text-center">Puntos de venta</h1>
+<div class="container text-center mt-5 mb-4">
+  <p class="texto_title bold espacios_textos">Puntos de Venta</p>
 </div>
 <div class="container mt-3">
   <table class="table table-hover">
@@ -100,6 +98,22 @@
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
         <button type="button" class="btn btn-primary" (click)="eliminarPunto()">Eliminar</button>
       </div>
+    </div>
+  </div>
+</div>
+<div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasRightLabel">
+  <div class="offcanvas-header">
+    <h5 id="offcanvasRightLabel">Mandar Nota a Administrador</h5>
+    <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+  </div>
+  <div class="offcanvas-body">
+    <div class="mb-3">
+      <label for="exampleFormControlTextarea1" class="form-label">Example textarea</label>
+      <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+    </div>
+    <div>
+      <button type="submit" class="btn btn-primary mb-3">Enviar
+      </button>
     </div>
   </div>
 </div>
